finish: responsive layout blocks

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </section>
 
-        <section id="planning" class="px-2">
+        <section id="planning">
             <div class="container columns">
                 <div class="column">
                     <div class="box">CONTENT</div>
@@ -61,11 +61,115 @@
             </div>
         </section>
 
-        
+        <section id="testimonial" class="px-2">
+            <div class="container">
+                <h2>LOREM IPSUM</h2>
+                <div class="card">
+                    <div class="card-image">
+                        <div class="box">CONTENT</div>
+                        <div class="box">CONTENT</div>
+                    </div>
+                    <div class="card-text">
+                        <div class="box">CONTENT</div>
+                        <div class="box">CONTENT</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <div class="box">CONTENT</div>
+                        <div class="box">CONTENT</div>
+                    </div>
+                    <div class="card-text">
+                        <div class="box">CONTENT</div>
+                        <div class="box">CONTENT</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <div class="box">CONTENT</div>
+                        <div class="box">CONTENT</div>
+                    </div>
+                    <div class="card-text">
+                        <div class="box">CONTENT</div>
+                        <div class="box">CONTENT</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="benefits" class="px-2">
+            <div class="container">
+                <h2>LOREM IPSUM</h2>
+                <div class="cards">
+                    <div class="card">
+                        <div class="box">CONTENT</div>
+                        <div class="box">CONTENT</div>
+                        <div class="box">CONTENT</div>
+                    </div>
+                    <div class="card">
+                        <div class="box">CONTENT</div>
+                        <div class="box">CONTENT</div>
+                        <div class="box">CONTENT</div>
+                    </div>
+                    <div class="card">
+                        <div class="box">CONTENT</div>
+                        <div class="box">CONTENT</div>
+                        <div class="box">CONTENT</div>
+                    </div>
+                    <div class="card">
+                        <div class="box">CONTENT</div>
+                        <div class="box">CONTENT</div>
+                        <div class="box">CONTENT</div>
+                    </div>
+                    <div class="card">
+                        <div class="box">CONTENT</div>
+                        <div class="box">CONTENT</div>
+                        <div class="box">CONTENT</div>
+                    </div>
+                    <div class="card">
+                        <div class="box">CONTENT</div>
+                        <div class="box">CONTENT</div>
+                        <div class="box">CONTENT</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="about-us" class="px-2">
+            <div class="container columns">
+                <div class="main-text column">
+                    <h2>LOREM IPSUM</h2>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae illo doloribus delectus itaque, cupiditate, blanditiis dolore accusantium recusandae commodi eaque aperiam nulla qui a mollitia numquam id esse sapiente optio!
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque dolorem fugiat tempore veniam iure quod ab debitis! Ex hic eius accusantium quaerat facilis iusto, consequatur cupiditate suscipit nesciunt, molestias odio?
+                    </p>
+                </div>
+                <div class="us-img column">
+                    <div class="box">CONTENT</div>
+                    <div class="box">CONTENT</div>
+                </div>
+            </div>
+        </section>
+
+        <section id="get-started">
+            <div class="container">
+                <div class="box">CONTENT</div>
+                <div class="box">CONTENT</div>
+                <div class="box">CONTENT</div>
+                <div class="box">CONTENT</div>
+            </div>
+        </section>
     </main>
 
-    <footer>
-
+    <footer class="site-footer">
+        <div class="container">
+            <div class="box">CONTENT</div>
+            <div class="box">CONTENT</div>
+            <div class="box">CONTENT</div>
+            <div class="box">CONTENT</div>
+        </div>
     </footer>
 </body>
 </html>
