style: modified section about us

--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
                 <div class="column-left column">
                     <h2 class="title">About us</h2>
                     <p class="text">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae illo doloribus delectus itaque, cupiditate, blanditiis dolore accusantium recusandae commodi eaque aperiam nulla qui a mollitia numquam id esse sapiente optio!
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae illo doloribus delectus itaque, cupiditate, blanditiis dolore accusantium recusandae commodi eaque aperiam nulla qui a mollitia numquam id esse sapiente optio! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet eaque sed accusamus aliquam minima necessitatibus beatae dignissimos modi, a dolores, quos ad cumque fugit perferendis culpa deserunt, tempore odio! Excepturi.
                     </p>
                     <p class="text">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque dolorem fugiat tempore veniam iure quod ab debitis! Ex hic eius accusantium quaerat facilis iusto, consequatur cupiditate suscipit nesciunt, molestias odio?
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque dolorem fugiat tempore veniam iure quod ab debitis! Ex hic eius accusantium quaerat facilis iusto, consequatur cupiditate suscipit nesciunt, molestias odio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sunt, labore et repudiandae animi quibusdam maxime porro amet. Et repellat temporibus ducimus nesciunt rerum quia provident ullam mollitia suscipit corporis?
                     </p>
                 </div>
                 <div class="column column-right">
